업무일지 그대로 구현 1차

--- a/app/globals.css
+++ b/app/globals.css
@@ -131,4 +131,8 @@
     padding: 0 !important;
     width: 100% !important;
   }
+  /* Reset padding for MainLayout container */
+  .pl-64 {
+    padding-left: 0 !important;
+  }
 }
